Add safety errdefer
https://github.com/karlseguin/blog/issues/79

--- a/src/learning_zig/06-heap_memory.html
+++ b/src/learning_zig/06-heap_memory.html
@@ -88,6 +88,12 @@ pub const Game = struct {
 		// store 10 most recent moves per player
 		var history = try allocator.alloc(Move, player_count * 10);
 
+		// This isn't strickly necessary. Nothing following the above alloc
+		// can fail, so this errdefer will never be executed. HOWEVER, if the
+		// function changes and faliable code is added, it could be easy to foroget
+		// adding this.
+		errdefer allocator.free(history);
+
 		return .{
 			.players = players,
 			.history = history,
