Fix incorrect code
https://github.com/karlseguin/blog/issues/80

--- a/src/learning_zig/06-heap_memory.html
+++ b/src/learning_zig/06-heap_memory.html
@@ -592,7 +592,7 @@ const std = @import("std");
 const builtin = @import("builtin");
 
 pub fn main() !void {
-	var gpa = std.heap.DebugAllocator(.{}) = .empty;
+	var gpa: std.heap.DebugAllocator(.{}) = .empty;
 	const allocator = if (builtin.mode == .Debug) gpa.allocator()
 	                  else std.heap.c_allocator;
 
