Fix a few typos
This fixes a few typos in the Heap and Coding in Zig sections.

--- a/src/learning_zig/06-heap_memory.html
+++ b/src/learning_zig/06-heap_memory.html
@@ -317,7 +317,7 @@ var gpa = std.heap.DebugAllocator(.{}){};
 	var gpa: std.heap.DebugAllocator = .init;
 	{% endhighlight %}
 
-	<p>Note that <code>init</code> is specif to the <code>DebugAllocator</code>. Other types tht use declarations literals might have a different (or many different) names. For example, an empty hash map is initialized using the <code>.empty</code> declaration literal.</p>
+	<p>Note that <code>init</code> is specific to the <code>DebugAllocator</code>. Other types that use declaration literals might have a different (or many different) names. For example, an empty hash map is initialized using the <code>.empty</code> declaration literal.</p>
 	</section>
 
 
