coding-in-zig: fix stdin prompt taking only one value and exiting

--- a/src/learning_zig/08-coding_in_zig.html
+++ b/src/learning_zig/08-coding_in_zig.html
@@ -144,6 +144,8 @@ pub fn main() !void {
   while (true) : (i += 1) {
     try stdout.interface.print("Please enter a name: ", .{});
     var name = try stdin.interface.takeDelimiterExclusive('\n');
+    stdin.interface.toss(1); // discard the delimiter
+
     if (builtin.os.tag == .windows) {
       // In Windows lines are terminated by \r\n.
       // We need to strip out the \r
@@ -260,6 +262,8 @@ pub fn main() !void {
   while (true) : (i += 1) {
     try stdout.interface.print("Please enter a name: ", .{});
     var name = try stdin.interface.takeDelimiterExclusive('\n');
+    stdin.interface.toss(1); // discard the delimiter
+
     if (builtin.os.tag == .windows) {
       // In Windows lines are terminated by \r\n.
       // We need to strip out the \r
