Fix invalid return type
https://github.com/karlseguin/blog/issues/96

--- a/src/learning_zig/02-language-overview-2.html
+++ b/src/learning_zig/02-language-overview-2.html
@@ -512,7 +512,7 @@ pub fn loadLast() !?Save {
 {% highlight zig %}
 const std = @import("std");
 
-pub fn main() void {
+pub fn main() !void {
 	// This is the line you want to focus on
 	const save = (try Save.loadLast()) orelse Save.blank();
 	std.debug.print("{any}\n", .{save});
