Update zig example to leverage better testing ergonomics
https://github.com/karlseguin/blog/issues/99

--- a/src/learning_zig/08-coding_in_zig.html
+++ b/src/learning_zig/08-coding_in_zig.html
@@ -506,7 +506,7 @@ pub fn add(a: anytype, b: @TypeOf(a)) @TypeOf(a) {
 
 const testing = @import("std").testing;
 test "add" {
-	try testing.expectEqual(@as(i32, 32), add(30, 2));
+	try testing.expectEqual(32, add(30, 2));
 }
 {% endhighlight %}
 
